welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: value unary_! is not a member of Int
	return ( hour < 7 && !hour > 20 )
                             ^